<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="grafik">Doğru - Yanlış Grafiği</string>
    <string name="lisans_taban_puan">Lisans Taban Puan</string>
    <string name="bolum">Bölümünüz</string>
    <string name="tercih_edilen_il">Tercih Edilen İl</string>
    <string name="yds_seviyesi">YDS Seviyeniz</string>
    <string name="sertifika">Sertifikalarınız</string>
    <string name="cikmis_sorular">Zaman Tüneli</string>
    <string name="app_name">Pedometer</string>
    <string name="notification_subtitle">Counting your steps</string>
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="quit">Quit</string>
    <string name="title_activity_maps">Map</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="location">Konum</string>
    <string name="filter_payment">Ödeme</string>
    <string name="filter_vehicle">Araç</string>
    <string name="_continue">Devam et</string>
    <string name="okay">Tamam</string>
    <string name="cancel">İptal</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="error">Hata</string>
    <string name="please_wait">Lütfen bekleyin&#8230;</string>
    <string name="google_play_services_warning">Uygulamayı kullanabilmek için Google Play Servislerini kurmanız gerekmektedir.</string>
    <string name="gps_settings_warning">Uygulamayı kullanabilmek için konum ayarlarını açmanız gerekmektedir.</string>
    <string name="closing_app">Uygulama sonlandırılıyor.</string>
    <string name="estimated_arrival_time">Tahmini varış süresi: &lt;b>%1$s&lt;/b></string>
    <string name="no_close_drivers_found">Yakında taksi yok</string>
    <string name="looking_for_close_drivers">Taksiler aranıyor&#8230;</string>
    <string name="filter_controller_info_message">Taksiniz için filtre uygulayabilirsiniz.</string>
    <string name="no_close_drivers_to_select">Seçim yapabilmeniz için yakınlarınızda bir taksi bulunamadı!</string>
    <string name="request_driver">Gönder</string>
    <string name="driver_request_driver_found_waiting_response">Sürücüden yanıt bekleniyor&#8230;</string>
    <string name="driver_request_looking_for_another_driver">Yeni sürücü bulundu, yanıt bekleniyor&#8230;</string>
    <string name="driver_request_driver_accepted">Sürücünüz yola çıktı</string>
    <string name="driver_request_driver_refused">Olumsuz yanıt alındı, yeni sürücü aranıyor&#8230;</string>
    <string name="driver_filter_header_title">Araç türünü seçin</string>
    <string name="driver_filter_normal">Taksi</string>
    <string name="driver_filter_economic">Nakliye</string>
    <string name="driver_filter_green">Dolmuş</string>
    <string name="navigation_menu_item_fare_calculation">Ücret hesaplama</string>
    <string name="navigation_menu_item_member_login">Giriş yap</string>
    <string name="navigation_menu_item_member_signup">Üye ol</string>
    <string name="navigation_menu_item_member_logout">Çıkış yap</string>
    <string name="select_starting_point">Başlangıç noktasını seçin</string>
    <string name="select_end_point">Bitiş noktasını seçin</string>
    <string name="select_point">Konum seçin</string>
    <string name="starting_point_selected">Başlangıç konumu seçildi</string>
    <string name="end_point_selected">Bitiş konumu seçildi</string>
    <string name="calculating">Hesaplanıyor&#8230;</string>
    <string name="route_error">Ücret hesaplama bilgisi alınırken bir hata oluştu, lütfen daha sonra tekrar deneyin.</string>
    <string name="please_wait_while_getting_address">Adres bilgisi alınıyor, lütfen bekleyin&#8230;</string>
    <string name="location_not_passed">Konum bilgisi alınamadı, lütfen tekrar deneyin!</string>
    <string name="nearby_drivers">Yakındaki sürücüler</string>
    <string name="call_for_driver">Çağır</string>
    <string name="show_driver_on_map">Haritada göster</string>
    <string name="member_login">Giriş yap</string>
    <string name="member_login_country_code">Ülke kodu</string>
    <string name="member_login_phone">Cep telefonu</string>
    <string name="member_login_password">Şifre</string>
    <string name="member_login_remember_me"> Beni hatırla</string>
    <string name="member_login_warning_field_phone">Lütfen geçerli bir telefon numarası girin</string>
    <string name="member_login_warning_field_password">Şifreniz en az 6 karakter olmalıdır</string>
    <string name="member_login_warning_inactive_account">Hesabınız henüz aktifleştirilmemiş!</string>
	<string name="member_login_error">Hatalı giriş denemesi!
	    \nTelefon numaranızı veya şifrenizi hatalı girdiniz.</string>
    <string name="member_signup">Üye ol</string>
    <string name="member_signup_firstname">Ad</string>
    <string name="member_signup_lastname">Soyad</string>
    <string name="member_signup_country_code">Ülke kodu</string>
    <string name="member_signup_phone">Cep telefonu</string>
    <string name="member_signup_password">Şifre (en az 6 karakter)</string>
    <string name="member_signup_email">E-posta</string>
    <string name="member_signup_warning_field_name">Lütfen isim ve soyisim alanlarını girin</string>
    <string name="member_signup_warning_field_phone">Lütfen geçerli bir telefon numarası girin</string>
    <string name="member_signup_warning_field_password">Şifreniz en az 6 karakter olmalıdır</string>
    <string name="member_signup_warning_field_email">Lütfen geçerli bir e-posta adresi girin</string>
    <string name="member_signup_warning_phone_already_registered">Bu telefon numarası zaten daha önceden kaydedilmiş!</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
</resources>